<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/textViewNomeEleitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:text="Nome"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/nome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTituloEleitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="142254464"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeEleitor" />

    <TextView
        android:id="@+id/textViewZonaEleitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Zona"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/zona"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/textViewSecaoEleitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/secao"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTituloEleitor"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloEleitor" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewNomeEleitor"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:text="@string/t_nome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewTituloEleitor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/t_tulo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <TextView
        android:id="@+id/secao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginEnd="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/t_secao"
        app:layout_constraintEnd_toStartOf="@+id/textViewSecaoEleitor"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloEleitor" />

    <TextView
        android:id="@+id/zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/zona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />
</android.support.constraint.ConstraintLayout>